--- a/index.html
+++ b/index.html
@@ -7,12 +7,15 @@
   </head>
   <body>
 
-<img src="la-glasses.jpg"></img>
-<nav><a href="index.html#about">about</a>
-  <a href="index.html#work">work</a>
+<div class="glasses"></div>
+<nav><a href="index.html#about">about </a>  • 
+  <a href="index.html#work"> work </a>
 </nav>
 
-<div id="about" name="about"></div>
-<div id="work" name="word"></div>
+<div id="about" name="about"><h1>Lori Aparentado</h1>
+  former coffee person. current student learning full-stack web development.
+</div>
+
+<div id="work" name="work"></div>
   </body>
 </html>
