--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
           <div class="links">
             <div class="link"><i class="far fa-envelope fa-4x"></i><br>
             <a href="mailto:laparentado@gmail.com">laparentado@gmail.com</a></div><br><br>
-            <i>Want to see what I've done and my work experience? Visit the links below!</i><br>
+            <i>Want to see other projects I've done and my work experience? Visit the links below!</i><br>
             <div class="link"><i class="far fa-file fa-4x"></i><br>
             <a href="resume.html">Resume</a></div>
             <div class="link"><i class="fab fa-github-square fa-4x"></i><br>
