--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 
     <!--Let browser know website is optimized for mobile-->
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+    <link href="https://fonts.googleapis.com/css?family=Lato|Space+Mono" rel="stylesheet">
   </head>
 
   <body>
