--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
     <div class="navbar-fixed">
         <nav>
-            <div class="nav-wrapper blue-grey">
+            <div class="nav-wrapper cyan">
               <ul id="nav-mobile" class="left">
                 <li><a href="#abt">About</a></li>
                 <li><a href="#prjcts">Projects</a></li>
