fix github link

--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
             <div class="link"><i class="far fa-file fa-4x"></i><br>
             <a href="resume.html">Resume</a></div>
             <div class="link"><i class="fab fa-github-square fa-4x"></i><br>
-            <a href="http://github.com/loriaparentado">Github</a></div>
+            <a href="http://github.com/laparentado">Github</a></div>
             <div class="link"><i class="fab fa-linkedin fa-4x"></i><br>
             <a href="https://www.linkedin.com/in/lori-aparentado/">LinkedIn</a></div>
           </div>
