--- a/index.html
+++ b/index.html
@@ -31,8 +31,11 @@
 
   <div class="container">
     <div id="top">
+        <img class="pic" src="IMG_8358.jpg">
+
         <h1><div id="demo"></div></h1>
         <p>former coffee person. current newbie web developer. <br>based in fishtown, philadelphia.</p>
+
     </div>
 
     <div id="abt"></div>
