--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
         <h1>Projects</h1>
           <div class="row">
               <div class="col s12 m12 l6 xl6">
-                  <div class="card">
+                  <div class="card medium">
                     <div class="card-image">
                       <div class="screentime"></div>
                     </div>
@@ -72,7 +72,7 @@
                   </div>
                 </div>
               <div class="col s12 m12 l6 xl6">
-                <div class="card">
+                <div class="card medium">
                   <div class="card-image">
                     <div class="alpha"></div>
                   </div>
@@ -89,7 +89,7 @@
                 
           
               <div class="col s12 m12 l6 xl6">
-                  <div class="card">
+                  <div class="card medium">
                     <div class="card-image">
                       <div class="word"></div>
                     </div>
@@ -103,7 +103,7 @@
                   </div>
                 </div>
               <div class="col s12 m12 l6 xl6">
-                <div class="card">
+                <div class="card medium">
                   <div class="card-image">
                     <div class="clock"></div>
                   </div>
