--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
     <!--Let browser know website is optimized for mobile-->
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <link href="https://fonts.googleapis.com/css?family=Lato|Space+Mono" rel="stylesheet">
+    <link rel="shortcut icon" type="image/png" href="favicon.png"/>
+
   </head>
 
   <body>
