--- a/index.html
+++ b/index.html
@@ -131,11 +131,11 @@
             <a href="mailto:laparentado@gmail.com">laparentado@gmail.com</a></div><br><br>
             <i>Want to see other projects I've done and my work experience? Visit the links below!</i><br>
             <div class="link"><i class="far fa-file fa-4x"></i><br>
-            <a href="resume.html">Resume</a></div>
+            <a href="resume.html" target="_blank">Resume</a></div>
             <div class="link"><i class="fab fa-github-square fa-4x"></i><br>
-            <a href="http://github.com/laparentado">Github</a></div>
+            <a href="http://github.com/laparentado" target="_blank">Github</a></div>
             <div class="link"><i class="fab fa-linkedin fa-4x"></i><br>
-            <a href="https://www.linkedin.com/in/lori-aparentado/">LinkedIn</a></div>
+            <a href="https://www.linkedin.com/in/lori-aparentado/" target="_blank">LinkedIn</a></div>
           </div>
 
 
