--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <link href="https://fonts.googleapis.com/css?family=Lato|Space+Mono" rel="stylesheet">
     <link rel="shortcut icon" type="image/png" href="favicon.png"/>
-
+    <title>Lori Aparentado</title>
   </head>
 
   <body>
